# customer-sentiment-hub

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README-DEPLOY.md  README.md  bitbucket-pipelines.yml  create_structure.py  docker-compose.yml  pyproject.toml
archive/: archive_middleware.py
src/customer_sentiment_hub/: __init__.py  __main__.py
src/customer_sentiment_hub/api/: adapters.py  app.py  middleware.py  models.py  routes.py
src/customer_sentiment_hub/cli/: __init__.py  app.py  commands.py
src/customer_sentiment_hub/config/: __init__.py  environment.py  settings.py
src/customer_sentiment_hub/domain/: __init__.py  schema.py  taxonomy.py  validation.py
src/customer_sentiment_hub/prompts/: __init__.py  formatters.py  templates.py
src/customer_sentiment_hub/services/: freshdesk_service.py  gemini_service.py  llm_service.py  processor.py
src/customer_sentiment_hub/templates/: freshdesk_note_template.html
src/customer_sentiment_hub/tests/: conftest.py
src/customer_sentiment_hub/tests/fixtures/: responses.json  reviews.json
src/customer_sentiment_hub/tests/unit/: test_schema.py  test_taxonomy.py  test_validation.py
src/customer_sentiment_hub/utils/: __init__.py  helpers.py  logging.py  result.py  secret_manager.py
tests/unit/: test_validation.py
